<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:scrollbars="vertical"
    android:background="@drawable/homebackground">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="335dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="22dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:text="@string/label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:id="@+id/textView"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView"
                android:layout_marginLeft="14dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="45dp"
                android:text="@string/labelnim"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textSize="16sp"
                android:id="@+id/txtNIM"
                android:layout_below="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/txtNIM"
                android:layout_alignStart="@+id/txtNIM"
                android:layout_below="@+id/txtNIM"
                android:text="@string/labelnama"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/txtNama"
                android:textSize="16sp"
                android:layout_below="@+id/textView3"
                android:layout_alignLeft="@+id/textView3"
                android:layout_alignStart="@+id/textView3" />

            <TextView
                android:text="@string/labelalamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:layout_below="@+id/txtNama"
                android:layout_alignLeft="@+id/txtNama"
                android:layout_alignStart="@+id/txtNama" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/txtAlamat"
                android:textSize="16sp"
                android:height="@android:dimen/notification_large_icon_height"
                android:gravity="top"
                android:width="@dimen/area_width"
                android:layout_below="@+id/textView4"
                android:layout_alignLeft="@+id/textView4"
                android:layout_alignStart="@+id/textView4" />

            <Button
                android:id="@+id/cmdSimpan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="53dp"
                android:background="@color/colorAccent"
                android:onClick="buttonHandler"
                android:text="@string/labelsimpan"
                android:textAllCaps="false"
                android:textColor="@android:color/background_light"
                android:layout_below="@+id/txtAlamat"
                android:layout_alignLeft="@+id/txtAlamat"
                android:layout_alignStart="@+id/txtAlamat" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>