<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/homebackground">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="335dp"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="22dp"
        card_view:cardCornerRadius="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="41dp"
                android:layout_marginStart="41dp"
                android:layout_marginTop="47dp"
                android:text="@string/label2"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_below="@+id/textView7"
                android:layout_marginTop="40dp"
                android:text="@string/labelnim"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView15"
                android:layout_alignStart="@+id/textView15"
                android:layout_below="@+id/textView15"
                android:layout_marginTop="26dp"
                android:text="@string/labelnama"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textView16"
                android:layout_alignStart="@+id/textView16"
                android:layout_below="@+id/textView16"
                android:layout_marginTop="26dp"
                android:text="@string/labelalamat"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/dataNIM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:layout_above="@+id/textView16"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/dataNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textView17"
                android:layout_alignLeft="@+id/dataNIM"
                android:layout_alignStart="@+id/dataNIM"
                android:text="TextView" />

            <TextView
                android:id="@+id/dataAlamat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView17"
                android:layout_alignBottom="@+id/textView17"
                android:layout_alignLeft="@+id/dataNama"
                android:layout_alignStart="@+id/dataNama"
                android:text="TextView" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>